<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.highScore.HighScoreWriterActivity"
    android:background="@drawable/hs_writer">

    <TextView
        android:id="@+id/txtDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/bangers"
        android:text="@string/set_credentials"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUsrID"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="332dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/bangers"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtScore"
        android:layout_width="280dp"
        android:layout_height="39dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="132dp"
        android:fontFamily="@font/bangers"
        android:autofillHints=""
        android:inputType="none"
        android:ems="10"
        android:hint="@string/score"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="260dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/bangers"
        android:hint="@string/name"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txtScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnWrite"
        android:layout_width="75dp"
        android:layout_height="45dp"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:fontFamily="@font/bangers"
        android:text="@string/store_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/textShow"
        android:layout_width="257dp"
        android:layout_height="191dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/bangers"
        android:freezesText="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/status_empty"
        android:textAllCaps="true"
        android:typeface="monospace"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txtUsrID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDisplay"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>