<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.highScore.HighScoreReaderActivity"
    android:background="@drawable/high_score">

    <TextView
        android:id="@+id/txtDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/bangers"
        android:text="@string/highscore"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUsrID"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="84dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/txtScore"
        android:layout_width="280dp"
        android:layout_height="39dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginBottom="132dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/score"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/txtName"
        android:layout_width="277dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsrID"
        app:layout_constraintVertical_bias="0.611"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textShow"
        android:layout_width="349dp"
        android:layout_height="441dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/status_empty"
        android:fontFamily="@font/bangers"
        android:textAllCaps="true"
        android:typeface="monospace"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/txtUsrID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDisplay"
        app:layout_constraintVertical_bias="0.608" />


</androidx.constraintlayout.widget.ConstraintLayout>